2010-10-27 Leon Aronson <leon@holmes.nl>
	* rddcopy.c, rdd_internals.c, rdd_internals.h: Added 'remaining' time to progress line.
	* configure.ac, rddcopy.c: removed RDD_RAW compile flag.

2010-03-31 Leon Aronson <leon@holmes.nl>
	* rddcopy.c, ewfwriter.c, writer.h: added output as ewf option.
	* rddcopy.c: added option for multiple output files.

2007-08-17 Jeroen van den Bos <jeroen@holmes.nl>

	* commandline.c: When using option short names, option and arguments
	don't have to be seperated byte whitespace anymore.

	* rddgui.h, util.c, wizwin.c: rdd-gui no longer crashes when either
	the integrity or statistics advanced dialog is opened.
	
	* commandline.c, commandline.h, rddcopy.c: rdd-copy no longer accepts
	the same file as input and output.
	
	* copier.h, progress.c, progress.h, rddcopy.c, robustcopier.c, simplecopier.c:
	Progress updates now also report the total amount of substituted
	bytes.

2003-01-02  EJ  <kojak@gaijin.nl>

	* verifier.c (verify_file): Added error which only occurred when the size of the file was an integer multiple of the blocksize.

	* configure.in, Makefile.am: Added proper detection of large files. This needs autoconf-2.50+ to work.

	* verifier.c: You can verify that an image written with
	checksumming turned on is not altered. You can also verify that
	the MD5 and SH1 checksums are valid.

	* rdd.c: added checksumming option. Currently CRC32 and Adler32
	are supported.

	* checksum.c, checksum.h: code for supporting the checksumming of
	images.

	* rdd_internals.h: moved the global options out.

	* commandline.c commandline.h: moved the parsing of the
	commandlines to its own files. In that way the code can be reused
	in other executatbles.

2002-04-20  raoul  <raoul@localhost.localdomain>

	* rcheck.1, verify.c:
	Raoul: added rcheck man page; made rcheck logfile optional

	* main.c, md5.c, notes.txt, rdd.1, rdd.c, rdd_internals.h, sha1.c, hash.c:
	Raoul: fixed config includes and optional output file
