@@ -15,3 +15,4 @@ Jeroen van den Bos <jeroen@holmes.nl>	maintenance
 Leon Aronson <leon@holmes.nl>		maintenance
 John Langezaal <laza@holmes.nl>		maintenance
 
+Daniel Rådesjö <daniel.radesjo@gmail.com>	update to work with new version of libewf (20201230)
